--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1404\cocoasubrtf340
-{\fonttbl}
-{\colortbl;\red255\green255\blue255;}
-\margl1440\margr1440\vieww10800\viewh8400\viewkind0
+body {
+	background-color: black;
+}
+
+header {
+	float: right;
+	margin-top: 3em;
+}
+
+.container-fluid {
+	max-width: 70em;
 }
