--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ header img {
 
 .slide {
 	float: left;
-    height: 335px;
     margin-right: 1px;
     overflow: hidden;
     position: relative;
@@ -78,6 +77,7 @@ p {
 
 nav {
 	float: left;
+	margin-top: 1em;
 }
 
 .row {
@@ -85,17 +85,17 @@ nav {
 }
 
 @media only screen and (max-width: 991px) and (min-width: 768px) {
-	.slide {
-	    width: 24.9%;
-	}
-
-	.slide img {
-	    /*max-width: 100%;*/
-	}
-
 	.shell {
-		width: 77%;
+		width: 100%;
 	}
+
+	.wrapper {
+		clear: both;
+		width: 100%;
+		height: auto;
+	}
+
+
 }
 
 @media only screen and (max-width:767px) {
